pyquest/tests/semantic_analysis/valid/test001.ql
// Identifier reference in condition
form testForm {
	"First Question"
	testIdentifier : boolean
	if (testIdentifier) {
		"Second Question"
		anotherIdentifier : integer
	}
}